Update 0180 per raybox-zero successful GF180 harden

--- a/0180-2023-12-01.md
+++ b/0180-2023-12-01.md
@@ -9,6 +9,52 @@
 *   Added `raybox-zero/test` -- VERY basic Verilog TBs for now.
 *   Changed rcp (reciprocal) implementation to go via a simple FSM wrapper. This has improved the timing enough to get a successful harden at a clock period of 44ns (~22.72MHz). We can probably go further by fixing up the shmul (shared multiplier) too.
 
+# Initial successful harden of top_ew_algofoogle
+
+## Params
+
+*   44ns clock period
+*   35% core util
+*   0.45 target density
+*   4 max fanout
+
+## Design
+
+*   Q11.11
+*   3 wait states in rcp_fsm
+*   7 WS for shmul
+
+## Results
+
+*   Fanout: 1452
+*   Fastest corner:
+    *   Slack: 5.19ns
+    *   Slew: 0
+    *   Cap: 0
+*   Slowest corner:
+    *   Slack: -20.42ns
+    *   Slew: 12; worst: 3.52/3.0
+    *   Cap: 0
+*   Typical corner:
+    *   Slack: 0.50ns
+    *   Slew: 0
+    *   Cap: 0
+
+# UPW hardening
+
+*   For now, slew/cap/fanout is **terrible** for user_project_wrapper.
+*   I can probably make it a bit better by moving the macro a bit more, and reordering macro pins.
+
+
+# Next steps
+
+*   Change name of top module. Instead of `top_ew_algofoogle` call it `top_raybox_zero_combo` and the next one could be called `top_raybox_zero_fsm`?
+*   Try placing both the original raybox-zero macro and 'fast' macro into UPW.
+*   NOTE: Be careful to add extra WS to shmul in *original* rbz?
+*   Wire up more of the IO pads.
+*   Put in a mux for the two macros.
+*   Change area/aspect.
+
 # Disabling FPGA hardware multipliers and other inferred DSP blocks
 
 Per [this](https://electronics.stackexchange.com/a/363922), in Quartus Prime we can:
