--- a/0181-2023-12-02.md
+++ b/0181-2023-12-02.md
@@ -23,6 +23,7 @@
     *   Can we cheat by just using `` `include `` statements all the way, and referencing relative paths?
 *   Don't forget tests!
 *   Need to create a mux.
+*   Reduce no. of LAs. Use more IOs.
 
 I think I need to do the following, which is probably what the other people wanting to do a submission would also need to do:
 
@@ -34,4 +35,69 @@ I think I need to do the following, which is probably what the other people want
 6.  FOCUS: JUST GET IT WORKING FOR ONE RAYBOX-ZERO INSTANCE, FIRST, AND UP TO EFABLESS!
 
 
+## Map
 
+*   https://github.com/algofoogle/algofoogle-multi-caravel:
+    *   Anton's collection of projects to *individually* harden and then combine into another repo to submit for GFMPW-1
+    *   Intended branches:
+        *   `gf180-base`: Clean setup from which other projects can stem. If its gets updated for any reason, hopefully we can merge from `gf180-base` to the respective other project branches (though hopefully we shouldn't need to).
+        *   `gf180-rbz-combo`: `verilog/rtl/raybox-zero` is a submodule on a branch that implements a lower-speed (15MHz?) hardening solution for raybox-zero pretty much as it comes from sky130, maybe just with pin placement tweaked.
+        *   `gf180-rbz-fsm`: `verilog/rtl/raybox-zero` is a submodule on a branch that uses the 'safer' parallel FSM modules, and is reported by OpenLane to achieve better timing (22.72MHz?)
+        *   `gf180-ss`: solo_squash
+        *   `gf180-vsr`: tt05-vga-spi-rom
+*   https://repositories.efabless.com/algofoogle/ztoa-team-multi-caravel:
+    *   Needs a mux block and proper wiring. This could be ugly: Even with 30 IOs, that's 90 *per project* (io_in, io_out, io_oeb for each)
+    *   Copy all of the individual projects into this one and maintain on efabless.
+    *   NO branches.
+    *   Make sure all can be hardened within this repo, and combined into UPW.
+    *   Create combined README, plus probably individual READMEs within subdirectories, with links to respective original repos.
+    *   Must pass precheck.
+    *   Make sure SPDX data is correct -- licenses throughout.
+    *   Method for updating:
+        *   Harden in source repo/branch to make sure it all works OK.
+        *   Copy algofoogle-multi-caravel@gf180-rbz-fsm contents for `verilog/rtl/raybox-zero-fsm` -- remove `.git*` stuff if any.
+        *   Make sure READMEs are updated and reference their respective source repo commits. This should include both the source CUP repo's commit, and whatever its project submodule commit is.
+        *   Make sure all `verilog/rtl/raybox-zero-fsm/src/rtl/*.v` are up-to-date in `verilog/includes/*`
+        *   NOTE: Decide where the top module should live for each macro. In its respective subdiretory of `verilog/rtl/...` is probably best.
+        *   CHECK whether `user_defines` needs to be updated. Might not need to worry too much given mux.
+        *   Update a snippet in `user_project_wrapper.v` -- make sure it is compatible with our mux.
+        *   Copy in `openlane/PROJECTNAME`
+        *   Update combo README.
+        *   Update `lvs/user_project_wrapper/lvs_config.json` if needed.
+        *   Update `openlane/user_project_wrapper` if needed.
+        *   Do a test harden.
+
+List of stuff I've done to `algofoogle-multi-caravel`:
+
+*   Add to `.gitignore`:
+    ```
+    caravel
+    dependencies
+    JUNK
+    mgmt_core_wrapper
+    ```
+*   Added raybox-zero@ew submodule (later @gf180?)
+*   Created `openlane/top_ew_algofoogle/config.json`
+*   Updated `openlane/user_project_wrapper/{config.json,macro.cfg}`
+*   Updated `verilog/includes/*`
+*   Updated `verilog/rtl/user_defines.v`
+*   Updated `verilog/rtl/user_project_wrapper.v`
+*   Added hardened files: def, lef, gds, lib, mag, maglef, sdc, sdf, signoff, spef, spi, verilog/gl
+*   Updated README
+*   Updated `lvs/user_project_wrapper/lvs_config.json`
+
+Things to check:
+
+*   All IO/port mappings are correct
+*   Update README
+*   Update `docs/`
+*   Tests should be in place
+
+## What I did
+
+*   Cloned https://github.com/algofoogle/algofoogle-multi-caravel
+*   `git checkout 3be3f7804e20d0785cae63dba2fe0d0c1ca57992`: Puts us at the "[Removed (most) example stuff](https://github.com/algofoogle/algofoogle-multi-caravel/commit/3be3f7804e20d0785cae63dba2fe0d0c1ca57992)" commit.
+*   `git checkout -b gf180-base`: `gf180-base` branch is now a relatively clean base for making a new branch for each project.
+*   `git push -u origin gf180-base`: Make sure `gf180-base` branch is on GitHub.
+*   Made `gf180-base` the default branch in GitHub.
+*   Updated README a bit to explain that this a base repo with multiple branches for each project.
