Update 0181: Extra notes and list of REPLACEME_... stuff

--- a/0181-2023-12-02.md
+++ b/0181-2023-12-02.md
@@ -22,7 +22,7 @@
     *   Make sure that each variation 
     *   Can we cheat by just using `` `include `` statements all the way, and referencing relative paths?
 *   Don't forget tests!
-*   Need to create a mux.
+*   Need to create a mux. NOTE: If we use a tri-state solution (i.e. instead of a mux) then I think each design can just share a common bus, but we must make sure there are no buffers inserted on macro pins (i.e. a config.json requirement, as per TT also).
 *   Reduce no. of LAs. Use more IOs.
 
 I think I need to do the following, which is probably what the other people wanting to do a submission would also need to do:
@@ -33,7 +33,7 @@ I think I need to do the following, which is probably what the other people want
 4.  Be sure to note in the README (and even in subdirs) what the respective repos are.
 5.  When the other repos are copied in to ztmc, prove that they still harden the same way.
 6.  FOCUS: JUST GET IT WORKING FOR ONE RAYBOX-ZERO INSTANCE, FIRST, AND UP TO EFABLESS!
-
+7.  VERIFY: Can ALL 38 GPIOs be used by a user design? My assumption that this is OK: At the right time, the firmware will just have to agree to disable all the other SoC functions that share GPIOs.
 
 ## Map
 
@@ -92,6 +92,7 @@ Things to check:
 *   Update README
 *   Update `docs/`
 *   Tests should be in place
+*   Do full GL test inc. when we have mutliple designs muxed
 
 ## What I did
 
@@ -101,3 +102,22 @@ Things to check:
 *   `git push -u origin gf180-base`: Make sure `gf180-base` branch is on GitHub.
 *   Made `gf180-base` the default branch in GitHub.
 *   Updated README a bit to explain that this a base repo with multiple branches for each project.
+*   Removed contents of `docs/` because it is a little outdated and belongs more to `user_proj_example`.
+*   Disabled automatic running of GitHub Actions, and otherwise updated:
+    *   Added submodule recursion to checkout, and changed checkout from v2 to v3.
+    *   Changed `user_proj_example` to `REPLACEME_project_macro_name`
+    *   Changed `user_project_flow_gf180mcuC` to `user_project_flow_gf180mcuD`
+*   Set user_defines for GPIOs 5..7 just to reflect their default SoC functions. Note that this means GPIO 6 will always power up as an OUTPUT, so beware.
+*   Put `REPLACEME_...` markers all over the place.
+    *   `REPLACEME_project_macro_name`: Replaces user_proj_example; should be the name of your top module, macro, instance, etc.
+    *   `REPLACEME_all_other_rtl_source_files`: Expand to a list of each of the .v files that make up the RTL source of your project
+    *   `REPLACEME_clock_port`: Appears in UPW's `config.json`. The `CLOCK_PORT` to use, which ***I think*** is typically the name of the macro's top port at which the clock signal comes in.
+    *   REPLACEME_project_macro_name.`REPLACEME_clock_net`: I think this is the name of the net (inside the design) that will actually be used for doing CTS...? I suppose in this way we MIGHT be able to do clock gating, muxing, etc...? There [is confusion about this](https://vlsi.jp/Introduction_to_OpenMPW.html#:~:text=The%20CLOCK_PORT%20specifies%20the%20port%20used%20for%20the%20clock%20input%20of%20the%20design%2C%20and%20the%20CLOCK_NET%20I%20honestly%20don%E2%80%99t%20know).
+*   Hopefully the only `user_proj_example` stuff that's left now is in `openlane/EXAMPLE-user_proj_example`
+
+Still to do:
+
+*   user_defines: Decide what their default configuration should be if we have multiple projects and a mux. Probably all INPUT_NOPULL to be safe?
+
+
+
