Update 0181 with rbz-fsm notes

--- a/0181-2023-12-02.md
+++ b/0181-2023-12-02.md
@@ -114,10 +114,33 @@ Things to check:
     *   `REPLACEME_clock_port`: Appears in UPW's `config.json`. The `CLOCK_PORT` to use, which ***I think*** is typically the name of the macro's top port at which the clock signal comes in.
     *   REPLACEME_project_macro_name.`REPLACEME_clock_net`: I think this is the name of the net (inside the design) that will actually be used for doing CTS...? I suppose in this way we MIGHT be able to do clock gating, muxing, etc...? There [is confusion about this](https://vlsi.jp/Introduction_to_OpenMPW.html#:~:text=The%20CLOCK_PORT%20specifies%20the%20port%20used%20for%20the%20clock%20input%20of%20the%20design%2C%20and%20the%20CLOCK_NET%20I%20honestly%20don%E2%80%99t%20know).
 *   Hopefully the only `user_proj_example` stuff that's left now is in `openlane/EXAMPLE-user_proj_example`
+*   A few other bits and pieces.
 
 Still to do:
 
 *   user_defines: Decide what their default configuration should be if we have multiple projects and a mux. Probably all INPUT_NOPULL to be safe?
 
+## Making `gf180-rbz-fsm` out of `gf180-base`
+
+1.  `git pull && git checkout gf180-base`
+2.  `git checkout -b gf180-rbz-fsm`
+3.  Look at what actual changes were done in the `main-gf180` branch.
+4.  `git submodule add -b gf180 git@github.com:algofoogle/raybox-zero verilog/rtl/raybox-zero-fsm`
+5.  I Set `CLOCK_PERIOD` in UPW's `config.json` to `44` to match that in `top_ew_algofoogle/config.json`, hoping it will help timing calculations at least a little.
+6.  ...etc...
+
+# First harden attempt with new structure and `gf180-rbz-fsm`
+
+Ref: https://github.com/algofoogle/algofoogle-multi-caravel/commit/adc99d6e84d75cd79e3d0bb182027691188395b9
+
+*   top_ew_algofoogle hardens at 44ns period; only fanout errors.
+*   UPW fails with hold validations at 44ns period; maybe we need to constrain it more? 35ns? 25ns?
 
 
+# Next steps
+
+*   Rename top_ew_algofoogle (esp. in `gf180-rbz-fsm`) and decide whether to keep the equivalent of `top_ew_algofoogle.v` in raybox-zero or in `verilog/rtl/`...?
+*   Work out what's going on with UPW hold vios.
+*   Clean up LAs and IOs, and if possible slim down or get rid of output muxes.
+*   Place design closer to middle, and change pin ordering?
+*   Change suffix (footer) from `SNIPPET1_NoShare` to `SNIPPET2_ShareIns`
