0182: GFMPW-1: Trying to fix UPW harden for gf180-rbz-fsm

--- a/0181-2023-12-02.md
+++ b/0181-2023-12-02.md
@@ -2,7 +2,7 @@
 
 | Previous journal: | Next journal: |
 |-|-|
-| [**0180**-2023-12-01.md](./0180-2023-12-01.md) | *Next journal TBA* |
+| [**0180**-2023-12-01.md](./0180-2023-12-01.md) | [**0182**-2023-12-03.md](./0182-2023-12-03.md) |
 
 # Getting algofoogle-multi-caravel up to efabless
 
@@ -140,6 +140,8 @@ Ref: https://github.com/algofoogle/algofoogle-multi-caravel/commit/adc99d6e84d75
 # Next steps
 
 *   Rename top_ew_algofoogle (esp. in `gf180-rbz-fsm`) and decide whether to keep the equivalent of `top_ew_algofoogle.v` in raybox-zero or in `verilog/rtl/`...?
+*   Put FSM around shmul.
+*   Include some simple verification circuits: blinker, etc.
 *   Work out what's going on with UPW hold vios.
 *   Clean up LAs and IOs, and if possible slim down or get rid of output muxes.
 *   Place design closer to middle, and change pin ordering?
