Update 0182: Test 3 UPW results

--- a/0182-2023-12-03.md
+++ b/0182-2023-12-03.md
@@ -136,18 +136,46 @@ Results for UPW:
     *   **Slowest min: -2.13 -- HOLD VIO**
     *   **Typical min: -1.69 -- HOLD VIO**
 
-
 # Test 3
+
+*   Change UPW CLOCK_PERIOD to 35 instead of 25. Does it make a difference? Only need to run it for UPW.
+
+Results for UPW:
+
+*   Time: 3:39
+*   GDS size: 
+*   Details from `olsum full-summary user_project_wrapper --run`:
+    *   WNS: 0??
+    *   TNS: 0??
+    *   Antennas: 30 pin, 30 net: Worst is 353%. 5 exceed 210% (see `reports/signoff/30-antenna_violators.rpt`) -- **same as Test 2**
+*   `reports/signoff/20-sta-rcx_nom/multi_corner_sta.checks.rpt`:
+    *   Fastest max: 10.97
+    *   Fastest slew: 10, worst is 6.66/2.60
+    *   Fastest cap: 5, worst is 0.63/0.23
+    *   Slowest max: -29.68
+    *   Slowest slew: 33, worst is 17.11/3.0
+    *   Slowest cap: 5, worst is 0.63/0.25
+    *   **Typical max: 0.25 -- OK!**
+    *   Typical slew: 13, worst is 10.05/3.0
+    *   Typical cap: 5, worst is 0.63/0.24
+*   `reports/signoff/20-sta-rcx_nom/multi_corner_sta.min.rpt` (HOLD):
+    *   **Fastest min: -1.51 -- HOLD VIO**
+    *   **Slowest min: -2.13 -- HOLD VIO**
+    *   **Typical min: -1.69 -- HOLD VIO**
+
+The only thing that changes is setup timing (and evidently by exactly the change in CLOCK_PERIOD).
+
+# Test 4
 
 *   FSM wrapper for SHMUL
 *   Try 40ns CLOCK_PERIOD for TEA
 *   Test on FPGA too
 
-# Test 4
+# Test 5
 
 *   Better assignment of IOs and LAs
 
-# Test 5
+# Test 6
 
 *   Try reducing density
 
