Tip 2312A: Handy ASIC stuff to add to Linux/VMs

--- a/0179-2023-11-30.md
+++ b/0179-2023-11-30.md
@@ -7,7 +7,14 @@
 # Quick update re GFMPW-1 attempts
 
 *   Put MPW9's `~/.bashrc` env var extensions into a separate script.
-*   Alias (function) for `git clone git@github.com:algofoogle/`
+*   Alias (function) for `git clone git@github.com:algofoogle/`:
+    ```bash
+    function gcanton() {
+        set -x
+        git clone git@github.com:algofoogle/$@
+        set +x
+    }
+    ```
 *   More TIPs (and links) for handy setup stuff including improving MPW9 VM, initial setup guides, etc.
 *   Try to create a bad design that fails timing requirements, even using a wide in/out bus for the macro.
 *   Make all of the raybox-zero parts more modular (macros) to really stress-test them but also make them individually testable in an MPW.
