--- a/0178-2023-11-28.md
+++ b/0178-2023-11-28.md
@@ -115,10 +115,12 @@ make top_ew_algofoogle
 With FP_CORE_UTIL set to 35, floorplan in GF180 comes out to about 955x953&micro;m. It fails with setup violations at the typical corner (I think 17.23ns over in the worst case).
 
 We might be able to improve this if we can:
+*   fix SDC file;
 *   get a more-dense layout;
 *   change pin ordering;
 *   add extra slack margins;
 *   drop to Q10.10;
+*   work with a halved clock (halved resolution);
 *   change multipliers and reciprocal in FSM to be more incremental.
 
 
