--- a/0182-2023-12-03.md
+++ b/0182-2023-12-03.md
@@ -167,15 +167,26 @@ The only thing that changes is setup timing (and evidently by exactly the change
 
 # Test 4
 
-*   FSM wrapper for SHMUL
-*   Try 40ns CLOCK_PERIOD for TEA
-*   Test on FPGA too
+*   Change TEA config.json to include:
+    ```json
+    "PL_RESIZER_HOLD_SLACK_MARGIN": 0.4,
+    "GLB_RESIZER_HOLD_SLACK_MARGIN": 0.2,
+    "PL_RESIZER_HOLD_MAX_BUFFER_PERCENT": 80,
+    "GLB_RESIZER_HOLD_MAX_BUFFER_PERCENT": 80,
+    ```
+    ...and if necessary do something similar for `_SETUP_` equivalents. Note that the figures above represent &times;4 for Holds, and would be &times;8 for Setups.
 
 # Test 5
 
 *   Better assignment of IOs and LAs
 
 # Test 6
+
+*   FSM wrapper for SHMUL
+*   Try 40ns CLOCK_PERIOD for TEA
+*   Test on FPGA too
+
+# Test 7
 
 *   Try reducing density
 
