WIP on 0182 for more tests

--- a/0182-2023-12-03.md
+++ b/0182-2023-12-03.md
@@ -175,10 +175,67 @@ The only thing that changes is setup timing (and evidently by exactly the change
     "GLB_RESIZER_HOLD_MAX_BUFFER_PERCENT": 80,
     ```
     ...and if necessary do something similar for `_SETUP_` equivalents. Note that the figures above represent &times;4 for Holds, and would be &times;8 for Setups.
+*   Run on Legion 7 laptop.
+
+Results for TEA:
+
+NOTE: This [failed](https://github.com/The-OpenROAD-Project/OpenLane/issues/2061) with a crash as it has done a few times at step 20, so I changed `FP_CORE_UTIL` from 35 to 34.
+
+*   Time: 15:09
+*   GDS size: 27MB (27462182)
+*   Details from `olsum full-summary top_ew_algofoogle --run`:
+    *   WNS: 0
+    *   TNS: 0
+    *   Dimensions: 970x968
+    *   CoreArea_um^2: 939,115.3408
+    *   Util: 35.09%
+    *   Antennas: 1 (123%)
+*   `reports/signoff/37-sta-rcx_nom/multi_corner_sta.checks.rpt`:
+    *   **Fanout: 1608 vios, most ~8/4, but some up to 32/4 (on clkbufs)!**
+    *   Fastest max: 15.49
+    *   Fastest slew: 0
+    *   Fastest cap: 0
+    *   Slowest max: -21.42
+    *   Slowest slew: 43 vios, worst 5.87/3.00
+    *   Slowest cap: 0
+    *   Typical max: 8.88
+    *   **Typical slew: 17 vios, worst 3.26/3.00**
+    *   Typical cap: 0
+
+Results for UPW:
+
+*   Time: 3:19
+*   GDS size: 
+*   Details from `olsum full-summary user_project_wrapper --run`:
+    *   WNS: -10.12
+    *   TNS: -251.86
+    *   Antennas: 28 pin, 28 net: Worst is 351%. 5 exceed 210% (see `reports/signoff/30-antenna_violators.rpt`) -- **NOTE: MOST are on LA pins**
+*   `reports/signoff/20-sta-rcx_nom/multi_corner_sta.checks.rpt`:
+    *   Fastest max: 3.23
+    *   Fastest slew: 10, worst is 7.51/2.60
+    *   Fastest cap: 5, worst is 0.71/0.23
+    *   Slowest max: -40.27
+    *   Slowest slew: 39, worst is 19.29/3.0
+    *   Slowest cap: 5, worst is 0.71/0.25
+    *   Typical max: -9.97
+    *   Typical slew: 13, worst is 10.05/3.0
+    *   Typical cap: 5, worst is 0.63/0.24
+*   `reports/signoff/20-sta-rcx_nom/multi_corner_sta.min.rpt` (HOLD):
+    *   **Fastest min: -1.44 -- HOLD VIO**
+    *   **Slowest min: -1.99 -- HOLD VIO**
+    *   **Typical min: -1.61 -- HOLD VIO**
+
 
 # Test 5
 
 *   Better assignment of IOs and LAs
+*   Reduce or remove gpout muxes
+*   Intended IO pad assignments:
+
+
+
+
+
 
 # Test 6
 
