--- a/tips/2312A.md
+++ b/tips/2312A.md
@@ -1,6 +1,6 @@
 # Tip 2312A: Handy ASIC stuff to add to Linux/VMs
 
-*   0179: Shortcut for `git clone git@github.com:algofoogle/`:
+1.  0179: Shortcut for `git clone git@github.com:algofoogle/`:
     ```bash
     function gcanton() {
         set -x
@@ -8,7 +8,7 @@
         set +x
     }
     ```
-*   0182: Shortcut for `summary.py`:
+2.  0182: Shortcut for `summary.py`:
     ```bash
     # Shortcut for summary.py.
     # Usage: olsum SUMMARY_TYPE [DESIGN [EXTRA_ARGS]]
@@ -22,15 +22,15 @@
         summary.py --caravel --design "$design" --$stype $@
     }
     ```
-*   klayout-sky130:
+3.  klayout-sky130:
     ```bash
     alias klayout-sky130='klayout -l ~/asic_tools/openlane_summary/klayout_gds.xml'
     ```
-*   .venv activate:
+4.  .venv activate:
     ```bash
     alias venv-load='source .venv/bin/activate'
     ```
-*   Change `~/.bashrc` sky130 env vars to make switching easier:
+5.  Change `~/.bashrc` sky130 env vars to make switching easier:
     *   `~/.bashrc`:
         ```bash
         install_dir=/home/zerotoasic/asic_tools
