Update 0182 re Test 6 and raybox-zero-fsm IO pad assignment

--- a/0182-2023-12-03.md
+++ b/0182-2023-12-03.md
@@ -225,25 +225,78 @@ Results for UPW:
     *   **Slowest min: -1.99 -- HOLD VIO**
     *   **Typical min: -1.61 -- HOLD VIO**
 
-
 # Test 5
+
+*   Ease off hold slack margins (&times;2 instead of &times;4).
+*   Reduce `FP_CORE_UTIL` from 34 to 30.
+*   Reduce `PL_TARGET_DENSITY` from 0.45 to 0.4
+
+Results: ***TBC***
+
+# Test 6
 
 *   Better assignment of IOs and LAs
 *   Reduce or remove gpout muxes
-*   Intended IO pad assignments:
+*   Rename `top_ew_algofoogle` to `top_raybox_zero_fsm`
+*   Remember:
+    *   Create `top_raybox_zero_fsm.v` in raybox-zero repo.
+    *   Create a snippet for it, to add to UPW.
+    *   Make registered outputs cover the new direct RGB outputs.
+    *   Change gf180-base README example to use new name.
+
+Intended IO pad assignments:
+
+| Digital | WLCSP | QFN | Dir | rbz-fsm function | SoC dir | SoC function |
+|-|-:|-:|-|-|-|-|
+| mprj_io[0] | D7 | 31 |  |  | IO | `JTAG`: JTAG system access |
+| mprj_io[1] | E9 | 32 |  |  | Out | `SDO`: Housekeeping SPI |
+| mprj_io[2] | F9 | 33 |  |  | In | `SDI`: Housekeeping SPI |
+| mprj_io[3] | E8 | 34 |  |  | In | `CSB`: Housekeeping SPI |
+| mprj_io[4] | F8 | 35 |  |  | In | `SCK`: Housekeeping SPI |
+| mprj_io[5] | E7 | 36 |  |  | In | `ser_rx`: UART receive |
+| mprj_io[6] | F7 | 37 |  |  | Out | `ser_tx`: UART transmit |
+| mprj_io[7] | E5 | 41 |  |  | In | `irq`: External interrupt |
+| mprj_io[8] | F5 | 42 | Out | `hsync` | Out | `flash2_csb`: User area QSPI |
+| mprj_io[9] | E4 | 43 | Out | `vsync` | Out | `flash2_sck`: User area QSPI |
+| mprj_io[10] | F4 | 44 | Out | `r0` | IO | `flash2_io[0]`: User area QSPI |
+| mprj_io[11] | E3 | 45 | Out | `r1` | IO | `flash2_io[1]`: User area QSPI |
+| mprj_io[12] | F3 | 46 | Out | `g0` | IO |  |
+| mprj_io[13] | D3 | 48 | Out | `g1` | IO |  |
+| mprj_io[14] | E2 | 50 | Out | `b0` | IO |  |
+| mprj_io[15] | F1 | 51 | Out | `b1` | IO |  |
+| mprj_io[16] | E1 | 53 | Out | `tex_csb` | IO |  |
+| mprj_io[17] | D2 | 54 | Out | `tex_sclk` | IO |  |
+| mprj_io[18] | D1 | 55 | IO | `tex_io0` | IO |  |
+| mprj_io[19] | C1 | 57 | In | `tex_io1` | IO |  |
+| mprj_io[20] | C2 | 58 | In | `tex_io2` | IO |  |
+| mprj_io[21] | B1 | 59 | In | `tex_io3` | IO |  |
+| mprj_io[22] | B2 | 60 | In | `vec_csb` | IO |  |
+| mprj_io[23] | A1 | 61 | In | `vec_sclk` | IO |  |
+| mprj_io[24] | C3 | 62 | In | `vec_mosi` | IO |  |
+| mprj_io[25] | A3 | 2 | In | `reg_csb` | IO |  |
+| mprj_io[26] | B4 | 3 | In | `reg_sclk` | IO |  |
+| mprj_io[27] | A4 | 4 | In | `reg_mosi` | IO |  |
+| mprj_io[28] | B5 | 5 | In | `debug_vec` | IO |  |
+| mprj_io[29] | A5 | 6 | In | `debug_map` | IO |  |
+| mprj_io[30] | B6 | 7 | In | `debug_trace` | IO |  |
+| mprj_io[31] | A6 | 8 | In | `outs_reg_enb` | IO |  |
+| mprj_io[32] | A7 | 11 | In | `mode0` | Out | `spi_sck`:  |
+| mprj_io[33] | C8 | 12 | In | `mode1` | Out | `spi_csb`:  |
+| mprj_io[34] | B8 | 13 | In | `mode2` | In | `spi_sdi`:  |
+| mprj_io[35] | A8 | 14 | Out | `gpout0` | Out | `spi_sdo`:  |
+| mprj_io[36] | B9 | 15 | Out | `gpout1` | IO | `flash_io[2]`: Optional XIP QSPI? |
+| mprj_io[37] | A9 | 16 | Out | `gpout2` | IO | `flash_io[3]`: Optional XIP QSPI? |
 
 
 
 
-
-
-# Test 6
+# Test 7
 
 *   FSM wrapper for SHMUL
 *   Try 40ns CLOCK_PERIOD for TEA
 *   Test on FPGA too
 
-# Test 7
+# Test 8
 
 *   Try reducing density
 
