--- a/0182-2023-12-03.md
+++ b/0182-2023-12-03.md
@@ -231,7 +231,52 @@ Results for UPW:
 *   Reduce `FP_CORE_UTIL` from 34 to 30.
 *   Reduce `PL_TARGET_DENSITY` from 0.45 to 0.4
 
-Results: ***TBC***
+Results for TEA:
+
+*   Time: 12:08
+*   GDS size: 27MB (27470586)
+*   Details from `olsum full-summary top_ew_algofoogle --run`:
+    *   WNS: 0
+    *   TNS: 0
+    *   Dimensions: 1033x1031
+    *   CoreArea_um^2: 1,064,610.5344
+    *   Util: 30.95%
+    *   Antennas: 0
+*   `reports/signoff/37-sta-rcx_nom/multi_corner_sta.checks.rpt`:
+    *   **Fanout: 1654 vios, most ~8/4, but some up to 42/4 (on clkbufs)!**
+    *   Fastest max: 15.46
+    *   Fastest slew: 0
+    *   Fastest cap: 0
+    *   Slowest max: -20.35
+    *   Slowest slew: 49 vios, worst 5.31/3.00
+    *   Slowest cap: 0
+    *   Typical max: 9.33
+    *   **Typical slew: 14 vios, worst 3.13/3.00**
+    *   Typical cap: 0
+
+Results for UPW:
+
+*   Time: 3:19
+*   GDS size: 28MB (29161934)
+*   Details from `olsum full-summary user_project_wrapper --run`:
+    *   WNS: -9.67
+    *   TNS: -237.17
+    *   Antennas: 28 pin, 28 net: Worst is 300%. 4 exceed 210% (see `reports/signoff/30-antenna_violators.rpt`) -- **NOTE: MOST are on LA pins, but the WORST are on IOs**
+*   `reports/signoff/20-sta-rcx_nom/multi_corner_sta.checks.rpt`:
+    *   Fastest max: 3.42
+    *   Fastest slew: 10, worst is 6.24/2.60
+    *   Fastest cap: 5, worst is 0.59/0.23
+    *   Slowest max: -39.20
+    *   Slowest slew: 45, worst is 16.03/3.0
+    *   Slowest cap: 5, worst is 0.59/0.25
+    *   Typical max: -9.52
+    *   Typical slew: 10, worst is 9.42/3.0
+    *   Typical cap: 5, worst is 0.59/0.24
+*   `reports/signoff/20-sta-rcx_nom/multi_corner_sta.min.rpt` (HOLD):
+    *   **Fastest min: -1.50 -- HOLD VIO**
+    *   **Slowest min: -2.18 -- HOLD VIO**
+    *   **Typical min: -1.69 -- HOLD VIO**
+
 
 # Test 6
 
@@ -244,7 +289,7 @@ Results: ***TBC***
     *   Make registered outputs cover the new direct RGB outputs.
     *   Change gf180-base README example to use new name.
 
-Intended IO pad assignments:
+IO pad assignments:
 
 | Digital | WLCSP | QFN | Dir | rbz-fsm function | SoC dir | SoC function |
 |-|-:|-:|-|-|-|-|
@@ -288,10 +333,11 @@ Intended IO pad assignments:
 | mprj_io[37] | A9 | 16 | Out | `gpout2` | IO | `flash_io[3]`: Optional XIP QSPI? |
 
 
-
+Results: TBC
 
 # Test 7
 
+*   Fix (or at least decide on) user_defines
 *   FSM wrapper for SHMUL
 *   Try 40ns CLOCK_PERIOD for TEA
 *   Test on FPGA too
@@ -299,8 +345,13 @@ Intended IO pad assignments:
 # Test 8
 
 *   Try reducing density
+*   Are there any SDC constraints we can put in to help things?
+*   Move macro placement
 
 
 # Next steps
 
 *   Update README to include instructions for hardening, inc. env vars.
+*   Extra raybox-zero improvements: Store extra 2 bits from texture memory, and make it selectable via gpouts.
+*   Change `GFMPW1_SNIPPET_top_raybox_zero_fsm.v` to use local names ('rbz_fsm_io...' instead of direct 'io...') so it can be easily wired up with a mux.
+*   Do we need more `a0s` and `a1s`? Do we need to do `io_out[]` assignments for pins that are never outputs?
