0183: Continue trying to fix rbz-fsm harden for GF180

--- a/0182-2023-12-03.md
+++ b/0182-2023-12-03.md
@@ -2,7 +2,7 @@
 
 | Previous journal: | Next journal: |
 |-|-|
-| [**0181**-2023-12-02.md](./0181-2023-12-02.md) | *Next journal TBA* |
+| [**0181**-2023-12-02.md](./0181-2023-12-02.md) | [**0183**-2023-12-04.md](./0183-2023-12-04.md) |
 
 # GFMPW-1: Trying to fix UPW harden for gf180-rbz-fsm
 
@@ -333,24 +333,66 @@ IO pad assignments:
 | mprj_io[37] | A9 | 16 | Out | `gpout2` | IO | `flash_io[3]`: Optional XIP QSPI? |
 
 
-Results: TBC
 
-# Test 7
+Results for TEA:
 
-*   Fix (or at least decide on) user_defines
-*   FSM wrapper for SHMUL
-*   Try 40ns CLOCK_PERIOD for TEA
-*   Test on FPGA too
+*   Time: 13:03
+*   GDS size: 26MB (26574150)
+*   Details from `olsum full-summary top_raybox_zero_fsm --run`:
+    *   WNS: 0
+    *   TNS: 0
+    *   Dimensions: 1024x1023
+    *   CoreArea_um^2: 1,047,347.4816
+    *   Util: 30.93%
+    *   Antennas: `reports/signoff/46-antenna_violators.rpt`
+        *   1: 107%
+*   `reports/signoff/37-sta-rcx_nom/multi_corner_sta.checks.rpt`:
+    *   **Fanout: 1612 vios, most ~8/4, but some up to 36/4 (on clkbufs)!**
+    *   Fastest max: 16.91
+    *   Fastest slew: 0
+    *   Fastest cap: 0
+    *   Slowest max: -20.59
+    *   Slowest slew: 26 vios, worst 5.46/3.00
+    *   Slowest cap: 0
+    *   Typical max: 9.37
+    *   **Typical slew: 8 vios, worst 3.13/3.00**
+    *   Typical cap: 0
 
-# Test 8
+Results for UPW:
 
-*   Try reducing density
-*   Are there any SDC constraints we can put in to help things?
-*   Move macro placement
+*   Time: 3:26
+*   GDS size: 27MB (28266134)
+*   Details from `olsum full-summary user_project_wrapper --run`:
+    *   WNS: -9.63
+    *   **TNS: -1712.88**
+    *   Antennas: `reports/signoff/30-antenna_violators.rpt`
+        *   18 pin, 18 net
+        *   **Worst is 858%!**
+        *   Most (14) exceed 210% -- **NOTE: MOST are on IOs**
+*   `reports/signoff/20-sta-rcx_nom/multi_corner_sta.checks.rpt`:
+    *   Fastest max: -2.78
+    *   Fastest slew: 8, worst is 7.73/2.60
+    *   Fastest cap: 4, worst is 0.73/0.23
+    *   Slowest max: -39.44
+    *   Slowest slew: 26, worst is 19.83/3.0
+    *   Slowest cap: 4, worst is 0.73/0.25
+    *   Typical max: -9.48
+    *   Typical slew: 8, worst is 11.64/3.0
+    *   Typical cap: 4, worst is 0.73/0.24
+*   `reports/signoff/20-sta-rcx_nom/multi_corner_sta.min.rpt` (HOLD):
+    *   **Fastest min: -1.73 -- HOLD VIO**
+    *   **Slowest min: -2.70 -- HOLD VIO**
+    *   **Typical min: -2.03 -- HOLD VIO**
+*   **NOTE:** Hold violations at UPW stage seem to be confined to LAs: Most are on `LA[0]` (reset), with a couple of others (gpout_sel?):
+    *   1x la_data_in[11]: -2.03
+    *   1x la_data_in[8]: -1.28
+    *   1x la_data_in[4]: -1.19
+    *   263x la_data_in[0]: <= -1.06
 
 
 # Next steps
 
+*   Test 7+
 *   Update README to include instructions for hardening, inc. env vars.
 *   Extra raybox-zero improvements: Store extra 2 bits from texture memory, and make it selectable via gpouts.
 *   Change `GFMPW1_SNIPPET_top_raybox_zero_fsm.v` to use local names ('rbz_fsm_io...' instead of direct 'io...') so it can be easily wired up with a mux.
