--- a/0183-2023-12-04.md
+++ b/0183-2023-12-04.md
@@ -4,6 +4,8 @@
 |-|-|
 | [**0182**-2023-12-03.md](./0182-2023-12-03.md) | *Next journal TBA* |
 
+# Continue trying to fix rbz-fsm harden for GF180
+
 
 # Other
 
