Add extra notes to 0183

--- a/0183-2023-12-04.md
+++ b/0183-2023-12-04.md
@@ -7,10 +7,6 @@
 # Continue trying to fix rbz-fsm harden for GF180
 
 
-# Other
-
-*   Write a runner/aggregator for TEA/UPW run results. Beware disk space.
-
 # Test 7
 
 *   Try registering LAs to avoid hold violations.
@@ -428,3 +424,27 @@ GRT_ANT_MARGIN  (def 10)
 *   Are there any SDC constraints we can put in to help things?
 *   Move macro placement
 
+
+# Other notes / Next steps
+
+*   Write a runner/aggregator for TEA/UPW run results. Beware disk space.
+*   Check this Verilator lint:
+    ```
+    %Warning-UNUSEDSIGNAL: /home/zerotoasic/anton/algofoogle-multi-caravel/openlane/top_raybox_zero_fsm/../../verilog/rtl/raybox-zero-fsm/src/rtl/row_render.v:11:21: Bits of signal are not used: 'texu'[5]
+
+         : ... In instance top_raybox_zero_fsm.rbzero.row_render
+       11 |   input wire  [5:0] texu,
+          |                     ^~~~
+    ```
+*   Get rid of unused states/params (inc. RCP_RDX) in wall_tracer
+*   Find out about SoC user interrupts, masking, and default behaviour
+*   List each Typical Corner hold vio in UPW:
+    ```bash
+    RPT=reports/signoff/20-sta-rcx_nom/multi_corner_sta.min.rpt
+    fgrep 'Typical Corner' -A 999999 $RPT | egrep 'Startpoint|Endpoint|slack \(' | less
+    ```
+    NOTE: Includes all Typical Corner hold paths, not just vios.
+*   Count hold vios (replace `wc -l` with `sort` to just get a list of the violated Startpoints):
+    ```bash
+    fgrep 'Typical Corner' -A 999999 $RPT | egrep 'Startpoint|Endpoint|slack \(' | fgrep 'VIOLATED' -B2 | fgrep Startpoint | wc -l
+    ```
