Minor update to 0183

--- a/0183-2023-12-04.md
+++ b/0183-2023-12-04.md
@@ -329,7 +329,13 @@ UPW: 617 hold vios, again all on LAs. Ranging up to -2.02. 1x LA[3], 1x LA[8], a
 # Test 18
 
 *   SDC: Relax constraints on LA-based pins. Do we want `-hold 2` or `-hold 1`? Put this in macro SDC, or UPW SDC? If we do the latter, then it could affect other designs...?
-
+*   Should we do set_input_delay on our i_reset_alt?
+*   Try:
+    ```sdc
+    # Exclude timing analysis for a specific port
+    set_disable_port_timing -port_name <port_name> -disable
+    ```
+    MAY BE INVALID. Instead try: https://sureshofficial.blogspot.com/2018/06/setfalsepath-vs-setdisabletiming.html
 
 # Test 19
 
